<resources>
    <string name="app_name">Better Buys</string>
    <string name="str_abcd">XXXXXXXXX</string>
    <string name="str_login">Login</string>
    <string name="str_user_name">User Name</string>
    <string name="str_user_mob">+91 9465478425</string>
    <string name="str_edit_profile">Edit Profile</string>
    <string name="str_EMAIL">Enter Email</string>
    <string name="str_email">abc@gmail.com</string>
    <string name="str_PASS">Enter Password</string>
    <string name="str_pass">Password</string>
    <string name="str_SIGNUP">Sign Up</string>
    <string name="str_for_pass">Forgot Password?</string>
    <string name="str_for_password">Forgot Password?</string>
    <string name="str_desc_reset_pw">if you need help to resetting your password \n we can help by sending you a link to reset it.</string>
    <string name="hint_mobile">+91 9876543210</string>
    <string name="str_continue">CONTINUE</string>
    <string name="str_otp_verification">OTP verification</string>
    <string name="str_name">First Name</string>
    <string name="str_surname">Last Name</string>
    <string name="str_repeat_pass">Repeat Password</string>
    <string name="str_reset_pass">RESET PASSWORD</string>
    <string name="str_val">OTP VALIDATION</string>
    <string name="str_price">799</string>
    <string name="str_60">60</string>
    <string name="str_tocart">ADD TO CART</string>
    <string name="str_home">Home</string>
    <string name="str_Categories">Categories</string>
    <string name="str_More">More</string>
    <string name="str_Profile">Profile</string>
    <string name="str_my_acc">My Account</string>
    <string name="str_setting">Setting</string>
    <string name="str_logout">Logout</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="beardo">Beardo</string>
    <string name="str_caffeine">Caffeine</string>
    <string name="str_campus">Campus</string>
    <string name="str_adidas">Adidas</string>
    <string name="str_ocean">Ocean</string>
    <string name="str_ustra">Ustraa</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_slamdunk_deals">Slamdunk Deals</string>
    <string name="str_Fragrance">Fragrance</string>
    <string name="str_footwear">Footwear</string>
    <string name="str_watches">Watches</string>
    <string name="str_topwear">Top Wear</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="str_discount">USE DISCOUNT CODE</string>
    <string name="str_mycart">My Cart</string>
    <string name="str_subtotal">Sub Total</string>
    <string name="str_total">Total</string>
    <string name="str_shipping">Shipping</string>
    <string name="str_checkout">CHECKOUT</string>
    <string name="str_contactus">Contact Us</string>
    <string name="str_faq">FAQ</string>
    <string name="str_aboutus">About Us</string>
    <string name="str_refund">Refund</string>
    <string name="str_terms_poli">Terms and Policies</string>
    <string name="str_quantity">Quantity</string>


    <string name="google">Google LLC is an American multinational technology company focusing on online advertising, search engine technology, cloud computing, computer software, quantum computing, e-commerce, artificial intelligence, and consumer electronics.</string>
    <string name="str_enter_valid_email">Enter valid email</string>
    <string name="str_enter_valid_pw">Enter valid password</string>
    <string name="free">Free</string>
</resources>