<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PlaceOrderActivity">

  <com.google.android.material.imageview.ShapeableImageView
      android:id="@+id/back"
      android:layout_width="@dimen/dimen_40dp"
      android:layout_height="@dimen/dimen_40dp"
      android:src="@drawable/backspace_24"
      android:padding="@dimen/dimen_10dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>

  <com.google.android.material.textview.MaterialTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="100dp"
      android:layout_marginTop="@dimen/dimen_8dp"
      android:text="@string/str_mycart"
      android:textColor="@color/black"
      android:textSize="@dimen/dimen_20dp"
      app:layout_constraintStart_toEndOf="@id/back"
      app:layout_constraintTop_toTopOf="parent" />

  <View
      android:layout_width="wrap_content"
      android:layout_height="@dimen/dimen_1dp"
      app:layout_constraintTop_toBottomOf="@id/back"
      android:background="@color/for_pass_color"
      android:layout_marginVertical="@dimen/dimen_5dp"
      app:layout_constraintStart_toStartOf="parent"/>

  <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/discount"
      android:layout_width="match_parent"
      android:layout_height="@dimen/dimen_40dp"
      app:layout_constraintTop_toBottomOf="@id/back"
      android:background="@color/cardview_color"
      android:layout_marginHorizontal="@dimen/dimen_10dp"
      android:hint="@string/str_discount"
      android:textAlignment="center"
      android:layout_marginTop="@dimen/dimen_10dp"
      android:drawableStart="@drawable/ic_giftcard"
      android:paddingStart="@dimen/dimen_10dp"/>

  <View
      android:layout_width="wrap_content"
      android:layout_height="@dimen/dimen_1dp"
      android:background="@color/for_pass_color"
      app:layout_constraintTop_toBottomOf="@id/discount"
      android:layout_marginVertical="@dimen/dimen_5dp"
      app:layout_constraintStart_toStartOf="parent"/>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/place_order_rview"
      android:layout_width="match_parent"
      android:layout_height="320dp"
      app:layout_constraintTop_toBottomOf="@id/discount"
      android:layout_marginTop="@dimen/dimen_20dp"
      android:layout_marginHorizontal="@dimen/dimen_10dp"
      tools:itemCount="3"
      tools:listitem="@layout/place_order_cart"/>

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/tv_subtotal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/str_subtotal"
      android:textSize="@dimen/dimen_16dp"
      android:layout_marginTop="@dimen/dimen_10dp"
      android:layout_marginStart="@dimen/dimen_20dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/place_order_rview"/>

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/tv_price"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/str_price"
      android:textColor="@color/black"
      android:textStyle="bold"
      android:textSize="@dimen/dimen_16dp"
      android:layout_marginTop="@dimen/dimen_10dp"
      android:layout_marginEnd="@dimen/dimen_20dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/place_order_rview"/>

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/tv_shipping"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/str_shipping"
      app:layout_constraintTop_toBottomOf="@id/tv_subtotal"
      android:textSize="@dimen/dimen_16dp"
      android:layout_marginTop="@dimen/dimen_10dp"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="@dimen/dimen_20dp"/>

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/tv_shipp_price"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/str_60"
      android:textStyle="bold"
      android:textColor="@color/black"
      app:layout_constraintTop_toBottomOf="@id/tv_price"
      android:textSize="@dimen/dimen_16dp"
      android:layout_marginTop="@dimen/dimen_10dp"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="@dimen/dimen_20dp"/>

  <View
      android:layout_width="wrap_content"
      android:layout_height="@dimen/dimen_1dp"
      android:background="@color/for_pass_color"
      app:layout_constraintTop_toBottomOf="@id/tv_shipping"
      android:layout_marginVertical="@dimen/dimen_10dp"
      app:layout_constraintStart_toStartOf="parent"/>

  <com.google.android.material.textview.MaterialTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/str_total"
      android:textSize="@dimen/dimen_16dp"
      app:layout_constraintTop_toBottomOf="@id/tv_shipping"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="@dimen/dimen_20dp"
      android:layout_marginTop="@dimen/dimen_16dp"/>

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/tv_total"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/str_total"
      android:textSize="@dimen/dimen_16dp"
      android:textStyle="bold"
      android:textColor="@color/black"
      app:layout_constraintTop_toBottomOf="@id/tv_shipping"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="@dimen/dimen_20dp"
      android:layout_marginTop="@dimen/dimen_16dp"/>

  <com.google.android.material.button.MaterialButton
      android:layout_width="match_parent"
      android:layout_height="@dimen/dimen_40dp"
      android:text="@string/str_checkout"
      android:backgroundTint="@color/black"
      app:layout_constraintTop_toBottomOf="@id/tv_total"
      android:layout_margin="@dimen/dimen_10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>