<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/pro_img"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_400dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"
            android:padding="@dimen/dimen_10dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pro_name"
                android:textSize="@dimen/dimen_20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_name"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/dimen_10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="@dimen/dimen_10dp"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ic_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_outline_favorite_border_24"
                android:layout_marginTop="@dimen/dimen_14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginRight="@dimen/dimen_20dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/pro_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_login"
            android:textSize="@dimen/dimen_12dp"
            android:layout_marginHorizontal="@dimen/dimen_20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_14dp"
                android:src="@drawable/baseline_currency_rupee_24"
                android:layout_marginTop="@dimen/dimen_3dp"
                android:layout_marginStart="@dimen/dimen_20dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pro_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_price"
                android:textColor="@color/black"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_addtocart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40dp"
            android:text="@string/add_to_cart"
            android:layout_marginHorizontal="@dimen/dimen_20dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dimen_20dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>