<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg_color"
    tools:context=".ui.HomeFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/scroll_view"
                layout="@layout/activity_horizontal_sv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_deals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:gravity="center"
                android:text="@string/str_slamdunk_deals"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_14dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scroll_view" />

            <LinearLayout
                android:id="@+id/fst_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@id/txt_deals">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_200dp"
                    android:layout_weight="1"
                    android:src="@drawable/img6" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_200dp"
                    android:layout_weight="1"
                    android:src="@drawable/img7" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sec_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@id/fst_linearlayout">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/beardo"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_20dp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_ustra"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_20dp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/third_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@id/sec_linearlayout">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_200dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:src="@drawable/img5" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_200dp"
                    android:layout_weight="1"
                    android:src="@drawable/img10" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fourth_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@id/third_linearlayout">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_campus"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_20dp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_adidas"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_20dp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/fifth_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@id/fourth_linearlayout">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_200dp"
                    android:layout_weight="1"
                    android:src="@drawable/img9" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_200dp"
                    android:layout_weight="1"
                    android:src="@drawable/img8" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sixth_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@id/fifth_linearlayout">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_caffeine"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_20dp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_ocean"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_20dp"
                    android:textStyle="bold" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>
