<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/product_image"
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="@dimen/dimen_150dp"
            android:layout_margin="@dimen/dimen_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/product_namee"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_18dp"
            android:text="@string/str_abcd"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_16dp"
            app:layout_constraintStart_toEndOf="@id/product_image"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_40dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_quantity"
            app:layout_constraintTop_toBottomOf="@id/product_namee"
            app:layout_constraintStart_toEndOf="@id/product_image"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_10dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_remove"
            app:layout_constraintEnd_toStartOf="@id/tv_item_count"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/dimen_68dp"
            android:layout_marginRight="@dimen/dimen_10dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_item_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_60"
            android:textSize="@dimen/dimen_20dp"
            app:layout_constraintEnd_toStartOf="@id/ic_add"
            android:layout_marginTop="@dimen/dimen_66dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="@dimen/dimen_10dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/dimen_68dp"
            android:layout_marginEnd="@dimen/dimen_20dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_rupee"
            android:layout_width="14dp"
            android:layout_height="@dimen/dimen_16dp"
            android:src="@drawable/baseline_currency_rupee_24"
            app:layout_constraintStart_toEndOf="@id/product_image"
            app:layout_constraintTop_toBottomOf="@id/tv_quantity"
            android:layout_marginTop="@dimen/dimen_28dp"
            android:layout_marginStart="@dimen/dimen_10dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/product_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_price"
            android:textSize="@dimen/dimen_16dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_quantity"
            app:layout_constraintStart_toEndOf="@id/ic_rupee"
            android:layout_marginTop="@dimen/dimen_24dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:src="@drawable/ic_delete"
            app:layout_constraintTop_toBottomOf="@id/ic_add"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>