<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/contact_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:background="@drawable/bg_edit_text"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dimen_40dp"
            android:layout_height="@dimen/dimen_40dp"
            android:src="@drawable/ic_call" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:text="@string/str_contactus"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_22dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_150dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:src="@drawable/ic_navigate_next" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/recp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@drawable/bg_edit_text"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dimen_40dp"
            android:layout_height="@dimen/dimen_40dp"
            android:src="@drawable/ic_receipt" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:text="@string/str_refund"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_22dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_190dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:src="@drawable/ic_navigate_next" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/recip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@drawable/bg_edit_text"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dimen_40dp"
            android:layout_height="@dimen/dimen_40dp"
            android:src="@drawable/ic_ques" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:text="@string/str_faq"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_22dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_220dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:src="@drawable/ic_navigate_next" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/reci"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@drawable/bg_edit_text"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dimen_40dp"
            android:layout_height="@dimen/dimen_40dp"
            android:src="@drawable/ic_baseline_person_24" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:text="@string/str_aboutus"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_22dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_170dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:src="@drawable/ic_navigate_next" />

    </LinearLayout>

</LinearLayout>